--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="hero" role="img" aria-label="4 coworkers in a work meeting"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook showing key components of search-engine-optimization" />
             <h2>Search Engine Optimization</h2>
             <p>
